--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,6 +58,9 @@
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
   "files.associations": {
     "stdio.h": "c",
-    "define.h": "c"
+    "define.h": "c",
+    "stdlib.h": "c",
+    "ReverseOrderPair.C": "cpp",
+    "globalfuncs.h": "c"
   }
 }
